--- a/.github/workflows/testFlow.yml
+++ b/.github/workflows/testFlow.yml
@@ -4,7 +4,7 @@ name: Publish Docker Image
 on:
   push:
     branches:
-      - "development"
+      - "master"
 # setup default working dir
 defaults:
   run:
