--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "d",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "datareachable dev",
-    "build": "datareachable build",
-    "build-dev": "datareachable build-dev"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "serve": "^13.0.2",
-    "test-bin-he2": "^0.0.50"
-  }
+    "name": "actions-my",
+    "version": "1.0.0",
+    "description": "\"# actions-my\"",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/szkj-web-he/actions-my.git"
+    },
+    "scripts": {
+        "start": "datareachable dev",
+        "build": "datareachable build",
+        "build-dev": "datareachable build-dev",
+        "lib": "datareachable lib"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/szkj-web-he/actions-my/issues"
+    },
+    "homepage": "https://github.com/szkj-web-he/actions-my#readme",
+    "dependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "test-test-abc-t": "^0.0.2"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.40",
+        "@types/react-dom": "^17.0.13"
+    }
 }
